--- a/ToDoApp.MVC/wwwroot/css/site.css
+++ b/ToDoApp.MVC/wwwroot/css/site.css
@@ -7,7 +7,7 @@ a.navbar-brand {
   word-break: break-all;
 }
 .ModifyCard{
-    background-color : darkturquoise ;
+    background-color : mediumvioletred !important ;
 }
 
 /* Provide sufficient contrast against white background */
